# ROS_FOLDER

./: .bash_history  .bashrc  .fzf.bash  .gitignore  .gitmodules  .gitmodules.fzi  .gitmodules.github  marker_config.rviz  spot_hand_mapping.cpp  transforms.txt
docker/: .bash_history  .bashrc  compose.yaml  docker_build.sh  docker_enter.sh  docker_run.sh  dockerfile  entrypoint.sh
nbv_ws/src/nbv_calculator/: CMakeLists.txt  package.xml
nbv_ws/src/nbv_calculator/include/nbv_calculator/: nbv_action_server.hpp
nbv_ws/src/nbv_calculator/src/: nbv_action_server.cpp  nbv_node.cpp
nbv_ws/src/nbv_interfaces/: CMakeLists.txt  package.xml
nbv_ws/src/nbv_mapping/: package.xml
testing_res/: Pictures.ipynb  graphs.ipynb
testing_res/.ipynb_checkpoints/: graphs-checkpoint.ipynb
testing_res/box/: candidates_0_0_unknown.txt  candidates_0_0_vuv.txt  candidates_0_1_unknown.txt  candidates_0_1_vuv.txt  candidates_0_2_unknown.txt  candidates_0_2_vuv.txt  candidates_1_0_unknown.txt  candidates_1_0_vuv.txt  candidates_1_1_vuv.txt  candidates_1_2_vuv.txt  candidates_2_1_vuv.txt  candidates_2_2_vuv.txt  candidates_3_1_unknown.txt  candidates_3_2_vuv.txt  candidates_4_2_vuv.txt  candidates_5_1_vuv.txt  candidates_5_2_vuv.txt  candidates_6_1_unknown.txt  candidates_6_1_vuv.txt  candidates_6_2_vuv.txt  candidates_7_1_unknown.txt  candidates_7_1_vuv.txt  candidates_7_2_vuv.txt  metrics_0_unknown.txt  metrics_0_vuv.txt  metrics_1_vuv.txt  metrics_2_unknown.txt  metrics_2_vuv.txt
testing_res/box/unknown_0/: candidates_0_0_unknown.txt  candidates_1_0_unknown.txt  candidates_2_0_unknown.txt  candidates_3_0_unknown.txt  metrics_0_unknown.txt
testing_res/box/unknown_1/: candidates_0_1_unknown.txt  candidates_1_1_unknown.txt  candidates_2_1_unknown.txt  candidates_3_1_unknown.txt  candidates_4_1_unknown.txt  candidates_5_1_unknown.txt  candidates_6_1_unknown.txt  candidates_8_1_unknown.txt  candidates_9_1_unknown.txt  metrics_1_unknown.txt
testing_res/box/unknown_2/: candidates_0_2_unknown.txt  candidates_1_2_unknown.txt  candidates_2_2_unknown.txt  candidates_3_2_unknown.txt  candidates_4_2_unknown.txt  metrics_2_unknown.txt
testing_res/box/vuv_0/: candidates_0_0_vuv.txt  candidates_1_0_vuv.txt  metrics_0_vuv.txt
testing_res/box/vuv_1/: candidates_0_1_vuv.txt  candidates_1_1_vuv.txt  candidates_2_1_vuv.txt  candidates_3_1_vuv.txt  candidates_4_1_vuv.txt  candidates_8_1_vuv.txt  metrics_1_vuv.txt
testing_res/box/vuv_2/: candidates_0_2_vuv.txt  candidates_1_2_vuv.txt  candidates_2_2_vuv.txt  candidates_3_2_vuv.txt  candidates_4_2_vuv.txt  candidates_5_2_vuv.txt  candidates_6_2_vuv.txt  candidates_7_2_vuv.txt  candidates_8_2_vuv.txt  metrics_2_vuv.txt
testing_res/bunny/: candidates_0_0_unknown.txt  candidates_0_1_unknown.txt  candidates_0_1_vuv.txt  candidates_1_0_vuv.txt  candidates_1_1_unknown.txt  candidates_1_1_vuv.txt  candidates_1_2_vuv.txt  candidates_2_0_vuv.txt  candidates_2_2_unknown.txt  candidates_3_2_unknown.txt  candidates_4_1_unknown.txt  candidates_4_1_vuv.txt  candidates_4_2_vuv.txt  candidates_5_1_vuv.txt  candidates_5_2_unknown.txt  candidates_6_1_vuv.txt  metrics_0_unknown.txt  metrics_0_vuv.txt  metrics_1_unknown.txt  metrics_1_vuv.txt  metrics_2_vuv.txt
testing_res/bunny/1_vuv/: metrics_1_vuv.txt
testing_res/bunny/2_unknown/: metrics_2_unknown.txt
testing_res/bunny/unknown_0/: candidates_0_0_unknown.txt  candidates_1_0_unknown.txt  candidates_2_0_unknown.txt  metrics_0_unknown.txt
testing_res/bunny/unknown_1/: candidates_0_1_unknown.txt  candidates_1_1_unknown.txt  candidates_2_1_unknown.txt  candidates_3_1_unknown.txt  candidates_4_1_unknown.txt  candidates_5_1_unknown.txt  candidates_6_1_unknown.txt  metrics_1_unknown.txt
testing_res/crate/: candidates_0_0_unknown.txt  candidates_0_0_vuv.txt  candidates_0_1_unknown.txt  candidates_0_1_vuv.txt  candidates_0_2_vuv.txt  candidates_1_0_unknown.txt  candidates_1_1_vuv.txt  candidates_2_0_vuv.txt  candidates_2_1_unknown.txt  candidates_2_1_vuv.txt  candidates_2_2_unknown.txt  candidates_2_2_vuv.txt  candidates_3_0_vuv.txt  candidates_3_1_vuv.txt  candidates_4_0_vuv.txt  candidates_4_1_vuv.txt  candidates_5_1_vuv.txt  candidates_6_0_vuv.txt  metrics_0_unknown.txt  metrics_0_vuv.txt  metrics_1_unknown.txt  metrics_2_vuv.txt
testing_res/drill/: candidates_0_1_unknown.txt  candidates_0_1_vuv.txt  candidates_1_1_unknown.txt  candidates_2_0_vuv.txt  candidates_3_0_vuv.txt  candidates_3_1_vuv.txt  candidates_4_0_vuv.txt  candidates_4_1_vuv.txt  candidates_5_1_vuv.txt  candidates_6_1_vuv.txt  metrics_0_unknown.txt  metrics_1_vuv.txt  metrics_2_vuv.txt
testing_res/large_crate/: metrics_0_vuv.txt  metrics_1_unknown.txt  metrics_1_vuv.txt
testing_res/large_crate_dis/: metrics_0_vuv.txt  metrics_2_vuv.txt
testing_res/large_crate_v1/: metrics_0_unknown.txt  metrics_0_unknown_0.01res.txt  metrics_0_vuv.txt  metrics_1_unknown.txt  metrics_1_vuv.txt  metrics_2_unknown.txt  metrics_2_vuv.txt
testing_res/small_box/: metrics_0_unknown.txt  metrics_0_vuv.txt  metrics_1_unknown.txt  metrics_2_vuv.txt
turtlebot3_ws/src/nbv_mapping/: CMakeLists.txt
turtlebot3_ws/src/nbv_mapping/include/nbv_mapping/: vdb_lifecycle.hpp
(+137 files in other folders)
